--- a/lesson7/index.html
+++ b/lesson7/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src='./MyPromise.js'></script>
-    <script>
+    <!-- <script src='./MyPromise.js'></script> -->
+    <script src='./selfPromise.js'></script>
+    <!-- <script>
         // executor 同步执行 
         // res rej
         // pending 触发Fulfilled Rejected
@@ -97,6 +98,6 @@
         //     console.log(reason);
         // });
 
-    </script>
+    </script> -->
 </body>
 </html>
